<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    tools:context="com.greengalaxy.herbera.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/login_outline"
        android:orientation="vertical">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/login_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/create_account"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/name_icon"/>
            <EditText
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:inputType="textPersonName"
                android:textColorHint="@color/lightGrayColor"
                android:textColor="@color/darkGrayColor"
                android:textSize="16sp"
                android:hint="@string/hint_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/email_icon"/>
            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/lightGrayColor"
                android:textColor="@color/darkGrayColor"
                android:textSize="16sp"
                android:hint="@string/hint_email"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/password_icon"/>
            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:textColorHint="@color/lightGrayColor"
                android:textColor="@color/darkGrayColor"
                android:textSize="16sp"
                android:hint="@string/hint_password"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/phone_icon"/>
            <EditText
                android:id="@+id/txt_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:inputType="number"
                android:textColorHint="@color/lightGrayColor"
                android:textColor="@color/darkGrayColor"
                android:textSize="16sp"
                android:hint="@string/hint_number"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/chk_seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/white"
                android:text="@string/seller"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@android:color/white"/>
            <CheckBox
                android:id="@+id/chk_buyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:buttonTint="@android:color/white"
                android:text="@string/buyer"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_register"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/login_button"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/already_member"
                android:textSize="12sp"
                android:textColor="@android:color/white" />
            <TextView
                android:id="@+id/btn_gotoLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:text="@string/go_login"
                android:textStyle="bold"
                android:textSize="12sp"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
        android:id="@+id/registerProgress"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:indeterminate="true"
        app:spb_sections_count="2"
        app:spb_colors="@array/gplus_colors"
        app:spb_speed="2.0"
        app:spb_stroke_width="4dp"
        app:spb_stroke_separator_length="0dp"
        app:spb_reversed="false"
        app:spb_mirror_mode="false"
        app:spb_progressiveStart_activated="true"
        app:spb_progressiveStart_speed="1.5"
        app:spb_progressiveStop_speed="3.4"/>

</LinearLayout>
