<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    tools:context="com.greengalaxy.herbera.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="@drawable/login_outline"
        android:orientation="vertical">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/login_logo"/>
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@android:color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/user_icon"/>
            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:background="@color/grayColor"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/lightGrayColor"
                android:textColor="@color/darkGrayColor"
                android:textSize="16sp"
                android:hint="@string/hint_email"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/email_icon"/>
            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:background="@color/grayColor"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/txt_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:textColorHint="@color/lightGrayColor"
                android:textColor="@color/darkGrayColor"
                android:textSize="16sp"
                android:hint="@string/hint_otp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@android:color/white"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/password_icon"/>
            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:background="@color/grayColor"
                android:layout_gravity="center_vertical"/>
            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:textColorHint="@color/lightGrayColor"
                android:textColor="@color/darkGrayColor"
                android:textSize="16sp"
                android:hint="@string/hint_password"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_reset"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/login_button"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
        android:id="@+id/resetProgress"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:indeterminate="true"
        app:spb_sections_count="2"
        app:spb_colors="@array/gplus_colors"
        app:spb_speed="2.0"
        app:spb_stroke_width="4dp"
        app:spb_stroke_separator_length="0dp"
        app:spb_reversed="false"
        app:spb_mirror_mode="false"
        app:spb_progressiveStart_activated="true"
        app:spb_progressiveStart_speed="1.5"
        app:spb_progressiveStop_speed="3.4"/>

</LinearLayout>
